# targetprocess-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
targetprocess_mcp/: __init__.py  client.py  config.py  server.py  setup.py
targetprocess_mcp/models/: __init__.py  bug.py  feature.py  project.py  release.py  task.py  user.py  user_story.py
tests/: conftest.py  test_client.py  test_config.py  test_server.py
